--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ classifiers = [
 dependencies = [
     "chardet>=5.2.0",
     "pyfiglet>=1.0.2",
+    "pyte>=0.8.2",
     "pyyaml>=6.0.2",
     "rich",
     "textual",
